openvpn disable cipher

--- a/openvpn/server.conf
+++ b/openvpn/server.conf
@@ -68,7 +68,7 @@ keepalive 10 120
 ;cipher BF-CBC        # Blowfish (default)
 ;cipher AES-128-CBC   # AES
 ;cipher DES-EDE3-CBC  # Triple-DES
-
+cipher none
 
 comp-lzo
 
