OpenVPN: Prevent dublicate usage of client certs

--- a/openvpn/server.conf
+++ b/openvpn/server.conf
@@ -45,7 +45,7 @@ push "redirect-gateway"
 # CERTIFICATE/KEY PAIRS FOR EACH CLIENT,
 # EACH HAVING ITS OWN UNIQUE "COMMON NAME",
 # UNCOMMENT THIS LINE OUT.
-duplicate-cn
+#duplicate-cn
 
 keepalive 10 120
 
