--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -14,6 +14,12 @@ server.groupname            = "www-data"
 server.port                 = 80
 
 
+
+$HTTP["host"] =~ "merciless.seperation.xyz" {
+	server.document-root        = "/opt/merciless_separation/lighttpd/www/merciless.seperation.xyz"
+}
+
+
 index-file.names            = ( "index.php", "index.html", "index.lighttpd.html" )
 url.access-deny             = ( "~", ".inc" )
 static-file.exclude-extensions = ( ".php", ".pl", ".fcgi" )
